CSS enhancements after fixing overflow bug

--- a/primordialsoup/static/css/primordialsoup.css
+++ b/primordialsoup/static/css/primordialsoup.css
@@ -97,8 +97,11 @@ body {
     font-weight: bold;
 }
 
+/* override chota.css .row */
 .row {
     overflow-x: hidden;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 hr {
@@ -195,8 +198,8 @@ div.desktop-nav-section {
 }
 
 div.desktop-nav-section .rain-body { 
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     height: 120px;
     width: 100%;
 }
@@ -218,7 +221,7 @@ div.desktop-nav-section p.header-text {
 div.desktop-nav-section ul {
     border-bottom: solid 1px var(--color-primary);
     margin: 15px 0px 15px 0px;
-    padding: 0 45px 0 15px;
+    padding: 0 45px 0 5px;
 }
 
 div.desktop-nav-section ul li {
@@ -269,7 +272,7 @@ div.main-section {
 
 header {
   position: relative;
-  padding: 25px 25px 0px 25px;
+  padding: 15px 15px 0px 15px;
 }
 
 @media only screen and (max-width: 599px) {
@@ -292,7 +295,7 @@ nav.nav-map {
 }
 
 nav.main {
-  padding: 0 25px;
+  padding: 0 15px;
 }
 
 nav.main div.link {
@@ -347,7 +350,7 @@ div.map-circle span {
 
 
 nav.footer {
-  padding: 0 35px;
+  padding: 0 25px;
 }
 
 nav.footer a {
@@ -439,13 +442,13 @@ div.content:first-child {
 }
 
 div.content {
-    padding: 0px 25px 15px 25px;
+    padding: 0px 15px 15px 15px;
 }
 
 /* footer */
 
 footer {
-  padding: 0 25px;
+  padding: 0 15px;
 }
 
 /* form */
@@ -507,7 +510,7 @@ span.helptext {
     font-size: var(--font-size);
     line-height: 1;
     padding: 1rem 2.5rem;
-    margin: 0 25px 0 0;
+    margin: 0 15px 0 0;
     text-align: center;
     text-decoration: none;
     -webkit-transform: scale(1);
@@ -527,7 +530,7 @@ button.btn-submit {
 /* list */
 
 .archive-image-container {
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 img.archive-submission-image-list {
@@ -555,14 +558,12 @@ img.archive-submission-image-list {
 
 div.events-list-card {
     position: relative;
-    margin: 25px 20px 20px 20px;
-    padding: 20px 10px 10px 10px;
+    padding: 15px 15px 15px 15px;
 }
 
 div.events-detail-card {
     position: relative;
-    margin: 0 20px 20px 20px;
-    padding: 10px 10px 10px 10px;
+    padding: 0px 15px 15px 15px;
 }
 
 div.events-list-card p {
@@ -665,8 +666,8 @@ a.event-project-title-link:hover~img.event-submission-image-list { display: bloc
     border-radius: 0px;
     -webkit-box-shadow: none;
     box-shadow: none;
-    padding: 20px;
-    margin: 10px 5px 25px 5px;
+    padding: 15px;
+    margin: 10px 5px 15px 5px;
     border: 1px solid var(--color-primary);
     border-radius: 0px;
     /* margin-bottom: 20px; */
@@ -829,7 +830,7 @@ hr.map {
     border-top: 1px solid var(--color-primary);
     padding: 0;
     width: 100%;
-    margin: 0px auto 10px;
+    margin: 0px auto 25px;
 }
 
 hr.map-event-detail-top {
@@ -855,16 +856,16 @@ span.highlight-events-index-row-card {
   flex-shrink: 0;
   border: 1px solid var(--color-primary);
   margin: 0px 15px 15px 0;
-  padding: 20px;
+  padding: 15px;
   white-space: initial;
 }
 
 span.highlight-events-index-row-card:first-child {
-    margin-left: 25px;
+    margin-left: 15px;
 }
 
 span.highlight-events-index-row-card:last-child {
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
 span.event-status-label {
@@ -882,7 +883,7 @@ span.event-detail-status-label {
     background-color: var(--bg-color);
     position: absolute;
     bottom: 15px;
-    right: 25px;
+    right: 15px;
     padding: 7.5px;
     border-radius: 50%;
     border: 1px solid var(--color-primary);
@@ -911,7 +912,7 @@ div.scroll-container::-webkit-scrollbar-track {
 .slide-arrows-container {
     position: absolute;
     top: 0;
-    right: 35px;
+    right: 25px;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
@@ -931,6 +932,7 @@ div.events-index-row {
     align-items: initial;
     white-space: nowrap;
     padding-top: 15px;
+    padding-left: 10px;
 
 }
 
@@ -949,15 +951,15 @@ span.events-index-row-card {
     position: relative;
     border: 1px solid var(--color-primary);
     margin: 0px 15px 15px 0;
-    padding: 20px;
+    padding: 15px;
 }
 
 span.events-index-row-card:first-child {
-    margin-left: 25px;
+    margin-left: 15px;
 }
 
 span.events-index-row-card:last-child {
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
 img.event-submission-image-list-highlight {
@@ -975,7 +977,7 @@ img.event-submission-image-list-highlight {
 a.event-project-title-link:hover~img.event-submission-image-list-highlight { display: block; }
 
 .image-container {
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .image-container-list {
@@ -1017,7 +1019,7 @@ div.pinboard-post-card {
     position: relative;
     border: 1px solid var(--color-primary);
     margin-bottom: 15px;
-    padding: 20px;
+    padding: 15px;
 }
 
 div.pinboard-post-card h3 {
